--- a/Scribble.html
+++ b/Scribble.html
@@ -45,9 +45,10 @@
 </head>
 <body>
 <nav class="navbar navbar-dark bg-dark">
-  <a class="navbar-brand" href="#" style="font-size: 30px">
-    <img src="assets/images/favicon-16x16.png" width="40" height="40" class="d-inline-block align-top" alt="" loading="lazy"> SCRIBBLED</a>
-    <button class="btn btn-danger" id="reload"><i class="fa fa-repeat"></i></button>
+  <a class="navbar-brand" href="index.html">
+    <img src="assets/images/favicon-16x16.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+    PaperJS
+  </a>
 </nav>
 <canvas id="myCanvas" resize="true"></canvas>
 <br>
