modified scribble page

--- a/Scribble.html
+++ b/Scribble.html
@@ -49,6 +49,7 @@
     <img src="assets/images/favicon-16x16.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
     PaperJS
   </a>
+    <button class="btn btn-danger" id="reload"><i class="fa fa-repeat"></i></button>
 </nav>
 <canvas id="myCanvas" resize="true"></canvas>
 <br>
