added the Mouse Waves

--- a/index.html
+++ b/index.html
@@ -54,9 +54,19 @@
       <img src="assets/images/Scribble.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Scribble</h5>
-        <p class="card-text">This is a cool that shows the power of PaperJS through a SketchBoard type environment.</p>
+        <p class="card-text">This is a cool webpage that shows the power of PaperJS through a SketchBoard type environment.</p>
       </div>
         <button class="btn btn-dark"><a href="Scribble.html" class="stretched-link alert-link">Go To Example</a></button>
+    </div>
+  </div>
+  <div class="col mb-3">
+    <div class="card h-100">
+      <img src="assets/images/MouseWaves.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Mouse Waves</h5>
+        <p class="card-text">This is a webpage that produces a wave that moves according to the movement of your mouse.</p>
+      </div>
+        <button class="btn btn-dark"><a href="MouseWaves.html" class="stretched-link alert-link">Go To Example</a></button>
     </div>
   </div>
 </div>
